<resources>
    <!-- MainActivity, ChooseSignupLogin, SignupPage, LoginPage -->
    <string name="app_name" translatable="false">App name</string>
    <string name="login"><U>Already have an account?</U></string>
    <string name="signup">Sign up</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="signuppage_spokenlanguages_text">I speak following language(s):</string>
    <string name="edittext_username_signuppage">    Username</string>
    <string name="edittext_password_signuppage">    Password</string>
    <string name="edittext_number_signuppage">    Mobile number</string>
    <string name="radiobutton_refugee">Refugee</string>
    <string name="radiobutton_volunteer">Volunteer</string>
    <string name="continue_button">Continue</string>
    <string name="back">Back</string>

    <!-- RefugeeMainPage -->
    <string name="button_startcall_refugeemain">Start call</string>
    <string name="textview_welcome_refugeemain">Welcome,</string>
    <string name="button_emergencyinfo_refugeemain">Emergency information</string>

    <!-- RefugeeCall -->
    <string name="hint_writenumber_call">Insert number...</string>
    <string name="button_findvolunteernumber">Find volunteer</string>
    <string name="text_volunteernumber">Volunteer\'s number: </string>



    <!-- RefugeeCallEnded -->
    <string name="button_homepage_callended">Homepage</string>
    <string name="button_savenotes_callended">Save note</string>
    <string name="hint_writenote_callended">Write a note...</string>
    <string name="text_callended_callended">Call ended</string>



    <!-- RefugeeMenu -->
    <string name="button_profile_refugeemenu">Profile</string>
    <string name="button_notes_refugeemenu">Notes</string>
    <string name="button_logoff_refugeemenu">Log off</string>



    <!-- RefugeeNotes -->
    <string name="dato_refugee_notes">Your notes</string>
    <string name="note_refugee_notes">Note activity</string>



    <!-- RefugeeProfile && VolunteerProfile -->
    <string name="speaklanguage_refugeeprofile">I speak the following languages:</string>
    <string name="mobilenumber_refugeeeditprofile">Mobile number</string>
    <string name="username_refugeeprofile">Username</string>

    <!-- RefugeeProfile -->
    <string name="text_editprofile_refugeeeditprofile">Edit profile</string>
    <string name="button_save_refugeeeditprofile">Save changes</string>


    <!-- Emergencyinfo -->
    <string name="activity_emergency0">Emergency number: 112</string>
    <string name="activity_emergency1">Police department: 114</string>

    <!-- VolunteerMainPage -->
    <string name="textview_welcome_volunteermain">Welcome,</string>
    <string name="radiobutton_active">Active</string>
    <string name="radiobutton_inactive">Inactive</string>

    <!-- VolunteerMenu -->
    <string name="button_profile_volunteermenu">Profile</string>
    <string name="button_logoff_volunteermenu">Log off</string>







    <!-- Other -->

    <string name="role_volunteer_refugeeprofile">Volunteer</string>
    <string name="role_refugee_refugeeprofile">Refugee</string>
    <string name="applanguage_refugeeprofile">App Language:</string>
    <string name="saveprofile">Save profile</string>

    <string name="tidspunkt_refugee_notes">indsæt tidspunkt</string>

    <string name="edit_refugee_notes">Edit</string>
    <string name="dansk_refugee_profile">Dansk</string>
    <string name="english_refugee_profile">English</string>
    <string name="arabic_refugee_profile">عربي</string>
    <string name="preflanguage_refugee_profile">I want the app to be in:</string>
    <string name="tyrkisk_refugee_edit_profile">Türkçe</string>

    <string name="activity_volunteer_main_page0">Welcome, name!</string>
    <string name="activity_volunteer_main_page1">Available</string>
    <string name="activity_volunteer_main_page2">Not available</string>
    <string name="activity_volunteer_main_page3">You can receive calls</string>
    <string name="activity_volunteer_main_page4">You can\'t receive calls</string>
    <string name="activity_login_page0">Login</string>
    <string name="Activity_login_page1"><U>Not a user? Create a user</U></string>
    <string name="Activity_choose_app_language0">Welcome!</string>
    <string name="Activity_choose_app_language1">عربي</string>
    <string name="Activity_choose_app_language2">Dansk</string>
    <string name="Activity_choose_app_language3">English</string>
    <string name="Activity_choose_app_language4">Soomaali</string>
    <string name="Activity_choose_app_language5">українська</string>
    <string name="Activity_choose_app_language6">Türkçe</string>
    <string name="Activity_choose_app_language7">Bosanski</string>
    <string name="Activity_choose_app_language8">Tiếng Việt</string>
    <string name="Activity_choose_app_language9">فارسی</string>
    <string name="Activity_choose_app_language10">پښتو</string>
    <string name="Activity_choose_app_language11">اردو</string>


    <!-- Array af strings used in the SignupPage activity -->
    <string-array name="languages_array">
        <item>Danish</item>
        <item>English</item>
        <item>Ukrainian</item>
        <item>Arabic</item>
        <item>Syrian</item>
    </string-array>
</resources>
