<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/app_name_box"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="131dp"
        android:background="@drawable/rectangle"
        android:text="@string/app_name"
        android:fontFamily="@font/outfit"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/red"
        />

    <!--ændre id til textView-->
    <TextView
        android:id="@+id/text_open_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="228dp"
        android:text="@string/login"
        android:textColor="@color/red"
        android:fontFamily="@font/outfit"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/button_open_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="304dp"
        android:background="@drawable/circle_button"
        android:fontFamily="@font/outfit"
        android:text="@string/signup"
        android:textSize="24sp"
        android:textStyle="bold"
        />


</RelativeLayout>